included knn imputation alg

--- a/Genome Imputation.ipynb
+++ b/Genome Imputation.ipynb
@@ -1,35 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genome Imputation Project"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 SNPs Baseline Accuracy: 0.8822857142857143\n",
-      "1000 SNPs Baseline Accuracy: 0.8262285714285714\n",
-      "10000 SNPs Baseline Accuracy: 0.8078542857142857\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import operator\n",
+    "import matplotlib.pyplot as pp\n",
     "from sklearn import preprocessing\n",
+    "from scipy.stats import mode\n",
     "\n",
     "def readTrainFile(filename):\n",
     "    return pd.read_csv(filename, sep=' ')\n",
     "\n",
-    "def createCrossValSet(original):\n",
-    "    train = original.iloc[:,0:100].copy()\n",
-    "    test = original.iloc[:,100:].copy()\n",
-    "    actual = original.iloc[:,100:].copy()\n",
+    "def createCrossValSet(original, divider):\n",
+    "    d = int(135*divider)\n",
+    "    train = original.iloc[:,0:d].copy()\n",
+    "    test = original.iloc[:,d:].copy()\n",
+    "    actual = original.iloc[:,d:].copy()\n",
     "    for idx in range(len(test)):\n",
     "        if idx % 2 == 1:\n",
     "            test.iloc[idx,:] = 'x'\n",
@@ -51,6 +51,7 @@
     "    return mode\n",
     "\n",
     "def calculateAccuracy(actual, predicted):\n",
+    "    print(\"Calculating Accuracy...\")\n",
     "    if actual.shape != predicted.shape:\n",
     "        print(\"Mismatch matrix dimensions\")\n",
     "        pass\n",
@@ -65,19 +66,76 @@
     "def baselineImputation(train, test):\n",
     "    # Simple Mean Imputation: take the mode of each SNP across all IND_#\n",
     "    # This assumes SNPs are independent\n",
+    "    print(\"Calculating Baseline...\")\n",
     "    for SNP in range(len(train)):\n",
     "        test.iloc[SNP,:] = test.iloc[SNP,:].replace('x', imputeMode(train.iloc[SNP,:], test))\n",
     "        \n",
+    "def calculateDistance(train, ind):\n",
+    "    result = []\n",
+    "    for t in range(train.shape[1]):\n",
+    "        diff = 0\n",
+    "        for snp in range(train.shape[0]):\n",
+    "            if ind.iloc[snp] == 'x':\n",
+    "                continue\n",
+    "            elif train.iloc[snp, t] != ind.iloc[snp]:\n",
+    "                diff = diff + 1\n",
+    "        result.append(diff)\n",
+    "    return np.array(result)\n",
+    "        \n",
+    "def fillMissing(train, closest, ind):\n",
+    "    for snp in range(ind.shape[0]):\n",
+    "        if ind.iloc[snp] == 'x':\n",
+    "            ind.iloc[snp] = int(mode(train.iloc[snp, closest])[0])\n",
+    "#             print(ind.iloc[snp])\n",
     "\n",
+    "def knnImputation(train, test, k):\n",
+    "    # for every individual, find k nearest neighbor and take the majority value of its neighbors\n",
+    "    print(\"Imputing...\")\n",
+    "    for ind in range(test.shape[1]):\n",
+    "        print(\"Calculating Distance...\")\n",
+    "        dist = calculateDistance(train, test.iloc[:,ind])\n",
+    "        closest = dist.argsort()[-k:]\n",
+    "        fillMissing(train, closest, test.iloc[:,ind])\n",
+    "        \n",
+    "def plotAccuracy(res_b, res_k, sets):\n",
+    "    pp.plot(sets, res_b, 'k', label='Baseline')\n",
+    "    pp.plot(sets, res_k[0], 'b', label='k=1')\n",
+    "    pp.plot(sets, res_k[1], 'g', label='k=3')\n",
+    "    pp.plot(sets, res_k[2], 'c', label='k=5')\n",
+    "    pp.plot(sets, res_k[3], 'm', label='k=7')\n",
+    "    pp.plot(sets, res_k[4], 'y', label='k=9')\n",
+    "    pp.plot(sets, res_k[5], 'r', label='k=11')\n",
+    "    pp.title(\"Baseline vs Local Imputation\")\n",
+    "    pp.xlabel(\"% of Original Set as Train Set\")\n",
+    "    pp.ylabel(\"Accuracy\")\n",
+    "    pp.axis([0,1,0,1])\n",
+    "    pp.legend()\n",
+    "    pp.savefig('results.png')\n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
     "#     trainSNPs = readTrainFile('imputation_training.txt')\n",
     "#     testSNPs = readTestFile('imputation_test.txt')\n",
     "    original = pd.read_csv('imputation_training.txt', sep=' ')\n",
-    "    sets = [100, 1000, 10000]\n",
-    "    for SNPcount in sets:\n",
-    "        train, test, actual = createCrossValSet(original.iloc[0:SNPcount,:])\n",
-    "        baselineImputation(train, test)\n",
-    "        print(str(SNPcount)+' SNPs Baseline Accuracy: '+str(calculateAccuracy(actual, test)))"
+    "    sets = [.25, .5, .75]\n",
+    "    neighbors = [1, 3, 5, 7, 9, 11]\n",
+    "    baseline_results = []\n",
+    "    knn_results = [[],[],[],[],[],[]]\n",
+    "    f = open('results.txt', 'a')\n",
+    "    for trainCount in sets:\n",
+    "        train, test_b, actual = createCrossValSet(original, trainCount)\n",
+    "        test_k = test_b.copy()\n",
+    "        baselineImputation(train, test_b)\n",
+    "        res_b = calculateAccuracy(actual, test_b)\n",
+    "        baseline_results.append(res_b)\n",
+    "        f.write(str(trainCount)+' SNPs Baseline Accuracy: '+str(res_b))\n",
+    "        \n",
+    "        for idx, k in enumerate(neighbors):\n",
+    "            knnImputation(train, test_k, k)\n",
+    "            res_k = calculateAccuracy(actual, test_k)\n",
+    "            knn_results[idx].append(res_k)\n",
+    "            f.write(str(trainCount) + ' SNPs KNN Accuracy: ' + str(k) + ': ' + str(res_k))\n",
+    "            \n",
+    "    plotAccuracy(baseline_results, knn_results, sets)"
    ]
   },
   {
@@ -97,6 +155,19 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# 0.25 SNPs Baseline Accuracy: 0.8062029411764706\n",
+    "# 0.5 SNPs Baseline Accuracy: 0.808364705882353\n",
+    "# 0.75 SNPs Baseline Accuracy: 0.8076941176470588"
+   ]
   }
  ],
  "metadata": {
